--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -2698,3 +2698,41 @@ textarea.form-control {
 	-moz-box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.30);
 	box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.30);
 }
+
+#info .bootstrap-select > .btn{
+	width:12rem !important;
+}
+
+#info .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+	width: 12rem !important;
+}
+
+.dropdown-menu > .asc, .dropdown-menu > .desc, .dropdown-menu > .sortable{
+	display: block;
+	width: 100%;
+	padding: 0.25rem 1.5rem;
+	clear: both;
+	font-weight: 400;
+	color: #212529;
+	text-align: inherit;
+	white-space: nowrap;
+	background-color: transparent;
+	border: 0;
+}
+
+.dropdown-menu > .asc:active, .dropdown-menu > .desc:active, .dropdown-menu > .sortable:active {
+	color: #fff;
+	text-decoration: none;
+	background-color: #eb3b5a;
+}
+
+.dropdown-menu > .asc:hover,
+.dropdown-menu > .asc:focus,
+.dropdown-menu > .desc:hover,
+.dropdown-menu > .desc:focus,
+.dropdown-menu > .sortable:hover,
+.dropdown-menu > .sortable:focus{
+	color: #16181b;
+	text-decoration: none;
+	background-color: #f8f9fa;
+}
