--- a/templates/front/deposer.html.twig
+++ b/templates/front/deposer.html.twig
@@ -15,14 +15,15 @@
 
 {% block body %}
     <div class="hero-wrap hero-wrap-2"
-         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;height: 35vh !important;"
+         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;height: 24vh !important;"
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-start align-items-lg-center justify-content-start">
                 <div class="col-md-12 ftco-animate text-center mt-5 mt-lg-0 mb-lg-5">
                     <p class="breadcrumbs mb-0"><span class="mr-3">
-                            <a href="{{ path('home') }}" title="Accéder à la page d'accueil">Accueil <i class="ion-ios-arrow-forward"></i></a></span> <span>Annonces</span></p>
+                            <a href="{{ path('home') }}" title="Accéder à la page d'accueil">Accueil <i
+                                        class="ion-ios-arrow-forward"></i></a></span> <span>Annonces</span></p>
                     <h1 class="mb-3 bread">Déposer une annonce</h1>
                 </div>
             </div>
