--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -200,19 +200,19 @@
             <div class="row align-items-end">
                 <div class="col-12 col-md-4 ftco-animate text-center">
                     <img src="{{ asset('assets/images/undraw_people_search_wctu.png') }}" alt="Image affichant un personnage avec une liste d'annonces" title="Image affichant un personnage avec une liste d'annonces" class="img-fluid">
-                    <h3 class="mt-3 font-weight-bold">Trouver</h3>
+                    <h3 class="mt-3 font-weight-bold text-dark">Trouver</h3>
                     <p>Nous pouvons vous aider à trouver la voiture qui vous correspond. Nous vous proposons un
                         catalogue de tous types de véhicules</p>
                 </div>
                 <div class="col-12 col-md-4 ftco-animate text-center">
                     <img src="{{ asset('assets/images/undraw_contact_us_15o2.svg') }}" alt="Image deux personnages avec des icones de contact" title="Image deux personnages avec des icones de contact" class="img-fluid">
-                    <h3 class="mt-3 font-weight-bold">Nous contacter</h3>
+                    <h3 class="mt-3 font-weight-bold  text-dark">Nous contacter</h3>
                     <p>Une fois que vous avez trouvez votre véhicule vous pouvez nous contacter en utilisant notre
                         formulaire de contact ou par téléphone</p>
                 </div>
                 <div class="col-12 col-md-4 ftco-animate text-center">
                     <img src="{{ asset('assets/images/undraw_city_driver_jh2h.svg') }}" alt="Image d'un personnage qui se penche sur la voiture" title="Image d'un personnage qui se penche sur la voiture" class="img-fluid">
-                    <h3 class="mt-3 font-weight-bold">Roulez</h3>
+                    <h3 class="mt-3 font-weight-bold text-dark" >Roulez</h3>
                     <p>Profitez de votre nouveau véhicule obtenu grâce à nos annonces. Si vous êtes une société, vous
                         pouvez le revendre</p>
                 </div>
@@ -245,8 +245,8 @@
                                                      style="object-fit: cover;"
                                                      alt="Image de {{ annonce.make }} {{ annonce.model }}" title="Image de {{ annonce.make }} {{ annonce.model }}">
                                             </div>
-                                            <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100">
-                                                <a class="list-annonce-title"
+                                            <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100  text-truncate">
+                                                <a class="list-annonce-title text-break"
                                                    href="{{ path('annonce', {'slug': annonce.slug }) }}"
                                                    title="Voir cette annonce : {{ annonce.make }} - {{ annonce.model }}">{{ annonce.title }}</a><span
                                                         class=" list-annonce-price mb-auto font-weight-bold">{{ annonce.price | number_format(0,'.','.') }} €</span>
@@ -268,7 +268,7 @@
                                                                 class="fas fa-cogs mr-2"></i>{{ annonce.transmission|capitalize }}</span><span
                                                             class="d-none d-sm-block"><i
                                                                 class="fas fa-gas-pump mr-2"></i>{{ annonce.fuelType|capitalize }}</span><span
-                                                            class="d-none d-sm-block"><i
+                                                            class="d-none "><i
                                                                 class="fas fa-calendar-day mr-2"></i>{{ annonce.year }}</span>
                                                 </p>
                                             </div>
@@ -289,7 +289,7 @@
 
 
                     </div>
-                    <a href="{{ path('annonces') }}" class="text-dark font-weight-bold" title="Voir tous les annonces">Afficher
+                    <a href="{{ path('annonces') }}" class="text-primary font-weight-bold" title="Voir tous les annonces">Afficher
                         tous les annonces ({{ annonces.getTotalItemCount }}) <i class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class="col-lg-3 sidebar">
