--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -19,7 +19,7 @@
 
 
     <div class="hero-wrap hero-wrap-2"
-         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;height: 24vh !important;"
+         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;"
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -88,7 +88,7 @@
                                 {% endif %}
                             </span>
                            <div class="dropdown">
-                               <button class="btn btn-outline-dark btn-round dropdown-toggle" type="button" id="filter"
+                               <button class="btn btn-outline-dark dropdown-toggle" type="button" id="filter"
                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                    Trier par
                                </button>
@@ -111,7 +111,7 @@
         </div>
     </div>
     <div class="d-flex d-lg-none mt-3 p-3 justify-content-between justify-content-lg-end">
-        <button class="btn btn-outline-dark btn-round " id="showFilter">
+        <button class="btn btn-outline-dark  " id="showFilter">
             <i class="fas fa-search mr-2"></i>
             Plus de filtre
         </button>
@@ -136,7 +136,7 @@
 
                         <div class="border-0 rounded-0 bg-white  js-filter pt-3">
                             <div class="d-lg-none mb-3 sticky-top bg-white">
-                                <button class="btn btn-outline-primary btn-sm btn-round" id="closeFilter" type="button">
+                                <button class="btn btn-outline-primary btn-sm " id="closeFilter" type="button">
                                     <i
                                             class="fas fa-chevron-left mr-3"></i>retour
                                 </button>
