--- a/templates/front/recherche.twig
+++ b/templates/front/recherche.twig
@@ -18,7 +18,7 @@
 
 
     <div class="hero-wrap hero-wrap-2"
-         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;height: 24vh !important;"
+         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;"
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -45,25 +45,52 @@
                     <span class="d-none d-lg-block text-dark font-weight-medium">
                         <span class="text-primary">{{ annonces.totalItemCount }}</span>
                         résultats
+                        {% if labelYear is not defined %} {% set labelYear = "Voir les moins récents"%} {% endif %}
+                        {% if labelPrice is not defined %}  {% set labelPrice = "Voir les plus chères" %} {% endif %}
+                        {% if labelMake is not defined %}  {% set labelMake = "Ordre alphabétique A-Z" %} {% endif %}
+                        {% if labelMileage is not defined %}  {% set labelMileage = "Voir les plus chères" %} {% endif %}
+
                         {% if app.request.get('q') is not empty %}  {{ app.request.get('q') }}{% endif %}
                         {% if app.request.get('make') is not empty %} - {{ app.request.get('make')|capitalize }}{% endif %}
                         {% if app.request.get('model') is not empty %} {{ app.request.get('model')|capitalize }}{% endif %}
                         {% if app.request.get('sort') is not empty and app.request.get('direction') is not empty %} -
                             {% set category = app.request.get('sort')|split('.')[1] %}
                             {% set direction = app.request.get('direction') %}
+                            {% if category == 'make' %}
+                                {% if direction == 'asc' %}
+                                    Ordre alphabétique A-Z
+                                    {% set labelMake = " Ordre alphabétique Z-A" %}
+                                {% else %}
+                                    Ordre alphabétique Z-A
+                                    {% set labelMake = " Ordre alphabétique A-Z" %}
+                                {% endif %}
+                            {% endif %}
+                            {% if category == 'year' %}
+                                {% if direction == 'asc' %}
+                                    Les moins récents
+                                    {% set labelYear = "Voir les plus récents" %}
+                                {% else %}
+                                    Les plus récents
+                                    {% set labelYear = "Voir les moins récents -" %}
+                                {% endif %}
+                            {% endif %}
                             {% if category == 'price' %}
                                 {% if direction == 'asc' %}
-                                    Prix croissant
+                                    Les moins chères
+                                    {% set labelPrice = "Voir les plus chères +" %}
                                 {% else %}
-                                    Prix décroissant
+                                    Les plus chères
+                                    {% set labelPrice = "Voir les moins chères -" %}
                                 {% endif %}
                             {% endif %}
 
                             {% if category == 'mileage' %}
                                 {% if direction == 'asc' %}
-                                    Kilométrage croissant
+                                    Les moins de kilométrage
+                                    {% set labelMileage = "Voir les plus de kilométrage +" %}
                                 {% else %}
-                                    Kilométrage décroissant
+                                    Les plus de kilométrage
+                                    {% set labelMileage = "Voir les moins de kilométrage -" %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
@@ -75,9 +102,10 @@
                             Trier par
                         </button>
                         <div class="dropdown-menu" aria-labelledby="filter">
-
-                            {{ knp_pagination_sortable(annonces, 'Prix +/-', 'p.price') }}
-                            {{ knp_pagination_sortable(annonces, 'Kilométrage +/-', 'p.mileage') }}
+                            {{ knp_pagination_sortable(annonces, labelMake, 'p.make') }}
+                            {{ knp_pagination_sortable(annonces, labelYear, 'p.year') }}
+                            {{ knp_pagination_sortable(annonces, labelPrice, 'p.price') }}
+                            {{ knp_pagination_sortable(annonces, labelMileage, 'p.mileage') }}
                         </div>
                     </div>
                 </div>
@@ -93,7 +121,7 @@
 
                         <div class="border-0 rounded-0 bg-white sticky-top js-filter">
                             <div class="d-lg-none mb-3 sticky-top bg-white">
-                                <button class="btn btn-outline-primary btn-sm btn-round" id="closeFilter" type="button"><i
+                                <button class="btn btn-outline-primary btn-sm " id="closeFilter" type="button"><i
                                             class="fas fa-chevron-left mr-3"></i>retour
                                 </button>
                             </div>
@@ -315,8 +343,8 @@
                 connect: true,
                 step: 1,
                 range: {
-                    'min': 0,
-                    'max': 300000
+                    'min': minValueKilometer,
+                    'max': maxValueKilometer
                 }
             });
             rangeKilometer.on('slide', function (values, handle) {
