--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
 
         <link rel="stylesheet" href="{{ asset('assets/css/aos.css') }}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
-        <link rel="stylesheet" href="{{ asset('assets/scss/style.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
 
     {% endblock %}
 </head>
